# LLMSystemTrading

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  out.txt  out2.txt  pyproject.toml  test_orb_out.txt  test_out.txt  test_out_2.txt  test_output.txt  train_hmm.py
backend/ai/: orchestrator.py  vision.py
backend/alembic/: env.py
backend/api/: deps.py
backend/core/: config.py  currency.py  llm_pricing.py  logging.py  security.py
backend/db/: models.py  postgres.py  questdb.py  redis.py
backend/mt5/: bridge.py  executor.py
backend/scripts/: cleanup_test_data.py  run_rule_trade.py  test_abstract_runner_syntax.py  test_order.py
backend/services/: abstract_runner.py  ai_trading.py  alerting.py  backtest_analytics.py  backtest_data.py  backtest_engine.py  backtest_metrics.py  equity_poller.py  history_sync.py  hmm_features.py  hmm_retrain.py  hmm_service.py  kill_switch.py  market_context.py  mt5_poller.py  mtf_backtest_loader.py  mtf_csv_loader.py  mtf_data.py  pipeline_tracer.py  position_maintenance.py  position_sizing.py  risk_manager.py  scheduler.py
backend/strategies/: __init__.py  base.py  base_strategy.py  ema_atr_breakout.py  eurusd_m15_scalp.py  hmm_strategy.py  orb_strategy.py
backend/tests/: cleanup_test_data.sql  conftest.py  test_account_mt5_path.py  test_account_stats.py  test_ai_trading.py  test_alerting.py  test_analytics.py  test_analyze.py  test_auto_trade.py  test_backtest_analytics.py  test_backtest_data.py  test_backtest_engine.py  test_backtest_metrics.py  test_base_strategy.py  test_bridge_rates_range.py  test_currency.py  test_equity_history.py  test_equity_poller.py  test_executor_pending.py  test_harmonic_backtest_integration.py  test_harmonic_patterns.py  test_harmonic_strategy.py  test_health.py  test_history_ai_context.py  test_history_endpoints.py  (+26 more)
(+179 files in other folders)
