[project]
name = "trading-backend"
version = "0.1.0"
description = "AI-driven multi-account trading system backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "python-multipart>=0.0.20",
    # Config & security
    "pydantic-settings>=2.6.0",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Database — PostgreSQL
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Database — QuestDB (uses PostgreSQL wire protocol)
    "psycopg2-binary>=2.9.0",
    # Cache / Pub-Sub — Redis
    "redis[asyncio]>=5.0.0",
    # AI / LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "google-genai>=1.0.0",
    # Vision (chart screenshots)
    "pillow>=11.0.0",
    "mss>=9.0.0",
    # HTTP client
    "httpx>=0.28.0",
    "pandas>=3.0.1",
    "hmmlearn>=0.3.2",
    # Scheduler
    "apscheduler>=3.10,<4",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
mt5 = [
    # Windows only — install separately on the trading host
    "MetaTrader5>=5.0.4866",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.uv]
# This is a FastAPI application, not a library — do not install as a package
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
